adding html words

--- a/index.html
+++ b/index.html
@@ -6,12 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>
-        <span class="H"></span>
-        <span class="E"></span>
-        <span class="L"></span>
-        <span class="L"></span>
-        <span class="O"></span>
-    </h1>
+    <h1>YOOO</h1>
+    <p>just testing currently</p>
 </body>
 </html>
