testing the merge stuff byt adding early

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <title>Document</title>
     <link rel="stylesheet" href="app.css">
 </head>
-<body>
-    <h1>YOOO</h1>
+<h2> honestly just testing the merge of git from file try purple</h2>
+<body><br>
+    <h1>YOOO</h1><br>
     <p>just testing currently</p>
 </body>
 </html>
