adding more for merge

--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <h2> honestly just testing the merge of git from file try purple</h2>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="app.css">
 </head>
-<h2> honestly just testing the merge of git from file try purple</h2>
+<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus quibusdam ratione magnam nisi itaque, error non. Fugit, deserunt. Iure distinctio nisi accusantium eligendi quis assumenda repellat itaque cupiditate illo voluptas?</p>
 <body><br>
-    <h1>YOOO</h1><br>
+    <h1>YOOO</h1>
     <p>just testing currently</p>
 </body>
 </html>
